--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.1000.0",
     "@aws-sdk/client-ses": "^3.896.0",
     "@aws-sdk/client-sns": "^3.908.0",
     "@hookform/resolvers": "^3.9.1",
